# sprout

./: Cargo.toml
crates/boot/src/actions/: edera.rs
crates/eficore/src/platform/: tpm.rs
crates/eficore/src/shim/: hook.rs
