[workspace]
members = [
  "crates/boot",
  "crates/build",
  "crates/config",
  "crates/eficore",
  "crates/bls",
  "crates/parsing",
]
resolver = "3"

[workspace.package]
license = "Apache-2.0"
version = "0.0.28"
homepage = "https://sprout.edera.dev"
repository = "https://github.com/edera-dev/sprout"
edition = "2024"

[workspace.dependencies]
bitflags = "2.11.1"
log = "0.4.29"
spin = "0.11.0"
uefi-raw = "0.14.0"

[workspace.dependencies.anyhow]
version = "1.0.102"
default-features = false

[workspace.dependencies.hex]
version = "0.4.3"
default-features = false
features = ["alloc"]

[workspace.dependencies.jaarg]
version = "0.2.2"
default-features = false
features = ["alloc"]

[workspace.dependencies.serde]
version = "1.0.228"
default-features = false
features = ["alloc", "derive"]

[workspace.dependencies.sha2]
version = "0.11.0"
default-features = false

[workspace.dependencies.shlex]
version = "2.0.1"
default-features = false

[workspace.dependencies.toml]
version = "1.1.2"
default-features = false
features = ["serde", "parse"]

[workspace.dependencies.uefi]
version = "0.37.0"
default-features = false
features = ["alloc", "global_allocator", "panic_handler"]

# Common build profiles
# NOTE: We have to compile everything for opt-level = 2 due to optimization passes
# which don't handle the UEFI target properly.
[profile.dev]
opt-level = 2

[profile.release]
lto = "thin"
strip = "symbols"

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = 1

[profile.dev-fast]
inherits = "dev"
strip = "debuginfo"
debug = 0
opt-level = 2
